fix specificity of <a> dark mode selector

--- a/src/playground/interface.css
+++ b/src/playground/interface.css
@@ -48,7 +48,7 @@ a {
     .player-only {
         color: #ddd;
     }
-    .player-only a {
+    a {
         color: #4af;
     }
 }
